Spam filter implemented, spam manager template was added. TODO: implement spam manager + add tags for custom image position in HTML helper